// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rules > base 1`] = `
[
  "default-param-last",
  "func-names",
  "import/extensions",
  "import/newline-after-import",
  "import/newline-after-import",
  "import/no-useless-path-segments",
  "no-bitwise",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-console",
  "no-constant-condition",
  "no-constant-condition",
  "no-new",
  "no-promise-executor-return",
  "no-undef",
  "no-unused-expressions",
  "no-unused-vars",
  "no-unused-vars",
  "no-var",
  "no-var",
  "no-var",
  "no-var",
  "no-var",
  "no-var",
  "no-var",
  "no-var",
  "no-var",
  "no-var",
  "unicorn/consistent-function-scoping",
  "unicorn/no-array-for-each",
  "unicorn/no-immediate-mutation",
  "unicorn/prefer-at",
  "unicorn/prefer-node-protocol",
  "unicorn/prefer-node-protocol",
  "unicorn/prefer-spread",
  "unicorn/prefer-string-replace-all",
  "vars-on-top",
  "vars-on-top",
  "vars-on-top",
  "vars-on-top",
  "vars-on-top",
  "vars-on-top",
  "vars-on-top",
]
`;

exports[`rules > base typescript 1`] = `
[
  "@typescript-eslint/no-explicit-any",
  "@typescript-eslint/no-unused-vars",
  "@typescript-eslint/no-wrapper-object-types",
  "no-console",
]
`;

exports[`rules > react 1`] = `
[
  "arrow-body-style",
  "func-names",
  "import/newline-after-import",
  "import/no-unresolved",
  "import/no-unresolved",
  "no-console",
  "no-console",
  "no-undef",
  "no-undef",
  "no-undef",
  "no-undef",
  "react-hooks/exhaustive-deps",
  "react-hooks/rules-of-hooks",
  "react/forbid-prop-types",
  "react/function-component-definition",
  "react/jsx-boolean-value",
  "react/no-unused-prop-types",
  "react/no-unused-prop-types",
  "react/no-unused-prop-types",
  "react/prop-types",
  "react/prop-types",
  "react/prop-types",
  "react/prop-types",
  "unicorn/prefer-module",
]
`;

exports[`rules > typescript 1`] = `
[
  "@typescript-eslint/no-explicit-any",
  "@typescript-eslint/no-explicit-any",
  "@typescript-eslint/no-unused-vars",
  "@typescript-eslint/no-unused-vars",
  "@typescript-eslint/no-unused-vars",
  "@typescript-eslint/no-unused-vars",
  "@typescript-eslint/no-unused-vars",
  "@typescript-eslint/no-use-before-define",
  "@typescript-eslint/no-wrapper-object-types",
  "@typescript-eslint/no-wrapper-object-types",
  "@typescript-eslint/no-wrapper-object-types",
  "@typescript-eslint/no-wrapper-object-types",
  "@typescript-eslint/no-wrapper-object-types",
  "@typescript-eslint/no-wrapper-object-types",
  "@typescript-eslint/no-wrapper-object-types",
  "@typescript-eslint/no-wrapper-object-types",
  "no-console",
  "no-console",
  "no-empty-function",
]
`;

exports[`rules > workflow 1`] = `[]`;
